# pwngenerator

./: .gitignore
docs/TFG/: 0-resumen.tex  1-introduccion.tex  2-estadodelarte.tex  3-desarrollo.tex  4-conclusiones.tex  5-futuro.tex  apendice.tex  glosario.tex  main.tex  referencias.bib  resumen.tex  trabajo.tex
examples/: agenda.c  bof.c  palindromo.c  vuelta.c
src/: Makefile  README.md  main.py  pyproject.toml
src/code/: agenda.c  babybof.c  chatgpt.c  phone.c  vulnerable.c
src/pwngen/cmd/: args.py  cli.py
src/pwngen/logic/: sast.py  vulngen.py
src/pwngen/parsers/: ast.py  pwnable.py  utils.py  visitors.py
src/pwngen/pwn/: compiler.py  debugger.py  exploit.py  solutions.py
src/pwngen/templates/: solve.py
