[tool.poetry]
name = "pwngen"
version = "0.1.0"
description = ""
authors = ["Miguel Angel Sanchez <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pycparser = "^2.22"
z3-solver = "^4.13.0.0"
pwntools = "^4.12.0"
rpyc = "^6.0.0"


[tool.poetry.group.dev.dependencies]
black = "^24.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
